<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/new_posts"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/new_posts" />
        <item
            android:id="@+id/moderation_posts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/moderation" />
        <item
            android:id="@+id/tell_story"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/tell_story" />
        <item
            android:id="@+id/top_stories"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/most_terrible_stories" />
        <item
            android:id="@+id/random_story"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/random_story" />
        <item
            android:id="@+id/happy_end"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/happy_end" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/about_project"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/about_project" />
            <item
                android:id="@+id/help_all"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/help_all" />
        </menu>
    </item>

</menu>
